--- a/source/admin/index.html
+++ b/source/admin/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <base href='/admin/'>
-  <title>Content Manager</title>
+  <title>SHINZAMONOの领地</title></title>
   <script src="https://cdn.jsdelivr.net/npm/netlify-identity-widget@latest/build/netlify-identity-widget.js"></script>
 </head>
 <body>
