--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/netlify-identity-widget@latest/build/netlify-identity-widget.js"></script>
   </head>
   <body>
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/netlify-cms@latest/dist/netlify-cms.js"></script>
     <script>
       CMS.registerPreviewStyle("/css/index.css");
       var PagePreview = createClass({
